strings-number: using `unsignedMultiplyHighCommon` intrinsic on JDK 21 (multi-release JAR)